# Shopi-Py

./: README.md  pyproject.toml
src/shopipy_enderelijas/: __init__.py  shop.py
