[build-system]
requires = ["hatchling", "discord.py"]
build-backend = "hatchling.build"

[project]
name = "shopipy_enderelijas"
version = "0.0.1"
authors = [
  { name="enderelijas" },
]
description = "A utility package for building simple and complex shops with discord.py"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/enderelijas/Shopi-Py"
Issues = "https://github.com/enderelijas/Shopi-Py/issues"